# snake-wasm

./: Cargo.toml  README.md  index.html
src/: lib.rs  random.rs  snake.rs
