[package]
name = "snake-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.58"

[dependencies.web-sys]
version = "0.3.58"
features = [
    "Window", 
    "CssStyleDeclaration", 
    "HtmlElement", 
    "HtmlDivElement", 
    "KeyboardEvent", 
    "Document", 
    "Element", 
    "console"] 

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }